--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,13 +1,7 @@
 $blue:    #0d6efd ;
 $indigo:  #6610f2 ;
-$purple:  #6f42c1 ;
-$pink:    #d63384 ;
-$red:     #dc3545 ;
-$orange:  #3f3d62 ;
-$yellow:  #beb9ab ;
-$green:   #d423bf ;
-$teal:    #20c997 ;
-$cyan:    #0dcaf0 ;
-
-$primary: #61be62;
-$lightgreen: #a3daa4; 
+$primary:       rgb(255, 219, 42);
+$secondary:    #f1893e;
+$light:         #f9f8f7;
+$dark:          #060111;
+$warning: rgb(147, 113, 250);
